src/test/ui/parser/unclosed-delimiter-in-dep.stderr
error: mismatched closing delimiter: `}`
  --> $DIR/unclosed_delim_mod.rs:7:1
   |
LL |     Ok(Value {
   |       - unmatched opening delimiter begins here
LL |     }
LL | }
   | ^ mismatched closing delimiter

error[E0308]: mismatched types
  --> $DIR/unclosed-delimiter-in-dep.rs:4:20
   |
LL |     let _: usize = unclosed_delim_mod::new();
   |            -----   ^^^^^^^^^^^^^^^^^^^^^^^^^ expected `usize`, found enum `Result`
   |            |
   |            expected due to this
   |
   = note: expected type `usize`
              found enum `Result<Value, ()>`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
